Move css into core

--- a/lithium_core/Cargo.toml
+++ b/lithium_core/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 authors = ["kryptan"]
 
 [dependencies]
-num-traits = "0.1"
-rand = "0.3"
+num-traits = "0.1.37"
+rand = "0.3.15"
+cssparser = "0.13.1"
+blake2-rfc = "0.2.17"
