--- a/lithium_webrender/Cargo.toml
+++ b/lithium_webrender/Cargo.toml
@@ -6,5 +6,5 @@ authors = ["kryptan"]
 [dependencies]
 lithium_core = { path = "../lithium_core" }
 
-[dependencies.webrender_traits]
+[dependencies.webrender_api]
 git = "https://github.com/servo/webrender"
