--- a/test-apps/css-styles/Cargo.toml
+++ b/test-apps/css-styles/Cargo.toml
@@ -6,3 +6,4 @@ authors = ["kryptan"]
 [dependencies]
 lithium_core = { path = "../../lithium_core" }
 lithium_glutin = { path = "../../lithium_glutin" }
+regex = "0.2"
